force-app/main/default/objects/VoiceCallTypeTemplate__mdt/VoiceCallTypeTemplate__mdt.object-meta.xml
<CustomObject>
    <description>Defines a configuration for a testing scenario to simulate a VoiceCall</description>
    <label>Voice Call Type Template</label>
    <pluralLabel>Voice Call Type Templates</pluralLabel>
</CustomObject>