force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Branch Code (External Id)</description>
    <label>Branch</label>
    <length>30</length>
    <type>Text</type>
</CustomField>