force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <description>What kind of call is this?</description>
    <label>Call Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
                <default>true</default>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>