force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/FromPhone__c.field-meta.xml
<CustomField>
    <fullName>FromPhone__c</fullName>
    <description>From this Phone number</description>
    <label>From Phone</label>
    <type>Phone</type>
</CustomField>