force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/IVR_Authenticated__c.field-meta.xml
<CustomField>
    <fullName>IVR_Authenticated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the caller been authenticated in the IVR?</description>
    <label>IVR Authenticated</label>
    <type>Checkbox</type>
</CustomField>