force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/IVR_Caller_Identified__c.field-meta.xml
<CustomField>
    <fullName>IVR_Caller_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the IVR identify the customer?</description>
    <label>IVR Caller Identified</label>
    <type>Checkbox</type>
</CustomField>