force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/IVR_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>IVR_Company_Code__c</fullName>
    <description>IVR identified Company Code (External Id)</description>
    <label>IVR Company Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>