force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/IVR_Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>IVR_Contact_External_Id__c</fullName>
    <description>External Id of the Contact identified by the IVR</description>
    <label>IVR Contact External Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>