force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/ScenarioNumber__c.field-meta.xml
<CustomField>
    <fullName>ScenarioNumber__c</fullName>
    <label>Scenario Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>