force-app/main/default/objects/VoiceCallTypeTemplate__mdt/fields/ToPhone__c.field-meta.xml
<CustomField>
    <fullName>ToPhone__c</fullName>
    <description>To Phone Number</description>
    <label>To Phone</label>
    <type>Phone</type>
</CustomField>