force-app/main/default/objects/VoiceCallTypeTemplate__mdt/listViews/Scenarios.listView-meta.xml
<ListView>
    <fullName>Scenarios</fullName>
    <columns>MasterLabel</columns>
    <columns>ScenarioNumber__c</columns>
    <columns>Branch__c</columns>
    <columns>CallType__c</columns>
    <columns>IVR_Caller_Identified__c</columns>
    <columns>IVR_Authenticated__c</columns>
    <columns>IVR_Company_Code__c</columns>
    <columns>IVR_Contact_External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>Scenarios</label>
</ListView>